5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1836_1280.log
== TEST (2019-07-01 23:00:07) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleir[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
			if tabuleiro[ytab,xtab] == 33
			
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)
print("life: ",life)	
-- ERROR:
File "XXXX", line 24
    if tabuleiro[ytab,xtab] == 33
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:01:04) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleir[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
			if tabuleiro[ytab,xtab] == 33:
				ytab = ytab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)
print("life: ",life)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:01:10) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleir[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
			if tabuleiro[ytab,xtab] == 33:
				ytab = ytab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)
print("life: ",life)	
-- EXECUTION TIME:
1.00632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1280/main.py", line 16, in <module>
    if tabuleir[ytab,xtab] == 33:
NameError: name 'tabuleir' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:01:16) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleir[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
			if tabuleiro[ytab,xtab] == 33:
				ytab = ytab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)
print("life: ",life)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:01:55) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleir0[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
			if tabuleiro[ytab,xtab] == 33:
				ytab = ytab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)
print("life: ",life)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:02:04) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
			if tabuleiro[ytab,xtab] == 33:
				ytab = ytab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)
print("life: ",life)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:02:39) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
			if tabuleiro[ytab,xtab] == 33:
				ytab = ytab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)
print("life: ",life)	
-- EXECUTION TIME:
1.14409
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  12
life:  75
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  2
posicao y:  10
moedas:  10
life:  10
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  10
moedas:  8
life:  80
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:05:55) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
			if tabuleiro[ytab,xtab] == 33:
				xtab = xtab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab<0:
			ytab = ytab + 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab + 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)
print("life: ",life)	
-- EXECUTION TIME:
1.07157
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  12
life:  75
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  2
posicao y:  10
moedas:  10
life:  10
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  10
moedas:  8
life:  80
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:05:59) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
			if tabuleiro[ytab,xtab] == 33:
				xtab = xtab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab<0:
			ytab = ytab + 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab + 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)
print("life: ",life)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:07:47) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
		if tabuleiro[ytab,xtab] == 33:
				xtab = xtab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab<0:
			ytab = ytab + 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab + 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)
print("life: ",life)	
-- EXECUTION TIME:
1.1339
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  8
life:  80
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  2
posicao y:  10
moedas:  12
life:  20
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  10
moedas:  8
life:  80
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:11:38) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab<0:
			ytab = ytab + 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab + 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ", moeda)
print("life: ", life)	
-- EXECUTION TIME:
1.0976
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  8
life:  80
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  2
posicao y:  10
moedas:  12
life:  20
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  10
moedas:  8
life:  80
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:11:40) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab<0:
			ytab = ytab + 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab + 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ", moeda)
print("life: ", life)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:12:37) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab<0:
			ytab = ytab + 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab + 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ", moeda)
print("life: ", life)	
-- EXECUTION TIME:
0.874613
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  8
life:  80
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  2
posicao y:  10
moedas:  12
life:  20
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  10
moedas:  8
life:  80
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:13:13) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("vv: ")))
mov = input("ff: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
		if tabuleiro[ytab,xtab] == 33:
			xtab = xtab + 1
			
			
	elif x == "w":
		ytab = ytab -1
		if ytab<0:
			ytab = ytab + 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab + 1
			
			
	elif x == "S":
		ytab = ytab + 1
		if ytab>b:
			ytab = ytab - 1
		if tabuleiro[ytab,xtab] == 33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
		
	
	
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ", moeda)
print("life: ", life)	
-- EXECUTION TIME:
1.0735
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  8
life:  80
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  2
posicao y:  10
moedas:  12
life:  20
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  10
moedas:  8
life:  80
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
